--- a/css/styles.css
+++ b/css/styles.css
@@ -226,16 +226,28 @@ video{
     font-size: 30px;
     color: white;
 }
-
+.linea9{
+    margin-top: 30rem;
+    left: 0px;
+    height: 250px;
+    z-index: -1;
+}
+.linea10{
+    margin-top: 26rem;
+    left: 0px;
+    height: 300px;
+    z-index: -1;
+}
 /*------ About Us ------*/
 
 .about_us_contenido_contenedor{
     width: 90%;
     background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 77.42%);
     padding: 50px 0px;
-    padding-right: 30%; 
+    padding-right: 20%; 
     clip-path: polygon(0 1%, 100% 0, 70% 100%, 0% 100%);
 }
+
 .about_us_titulo{
     font-family: Poppins-BoldItalic;
     font-size: 40px;
@@ -248,7 +260,8 @@ video{
 }
 .about_us_informacion{
     margin-top: 20px ;
-    width: 80%;
+    width: 90%;
+    padding-right: 25%;
 }
 .about_us_informacion article h6{
     font-family: Poppins-ExtraBoldItalic;
@@ -289,17 +302,14 @@ video{
 .about_us_boton:hover{
     background: #da117c;
 }
-
-.about_us_img{
+.svg{
     position: absolute;
-    height: 75%;
-    width: 45%;
     right: 0px;
-    margin-bottom:50px ;
-    border-radius: 30px;
-    clip-path: polygon(26% 0 , 100% 0 , 100% 70%, 90% 100%, 0 100%);
-    z-index: 0;
+    height: 600px;
+    z-index: 10;
+    margin-top: -80px;
 }
+
 .about_us_caracteristicas{
     position: absolute;
     height: 100px;
@@ -308,9 +318,9 @@ video{
     border-radius: 25px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px 0px #00000040;
-    z-index: 100px;
-    margin-top: 640px;
-    margin-right: 4%;
+    z-index: 100;
+    margin-top: 450px;
+    margin-right: 20px;
 }
 
 .about_us_caracteristicas ul li div{
@@ -324,7 +334,7 @@ video{
     font-size: 20px;
     line-height: 23px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: justify !important;
 }
 .about_us_caracteristicas ul li div img{
     height: 50px;
@@ -415,6 +425,30 @@ video{
     background: #ff790c;
 }
 
+.linea5{
+    margin-top: 44rem;
+    left: 0px;
+    height: 250px;
+    z-index: -1;
+}
+.linea6{
+    margin-top: 40rem;
+    left: 0px;
+    height: 300px;
+    z-index: -1;
+}
+.linea7{
+    margin-top: 2rem;
+    right: 0px;
+    height: 300px;
+    z-index: -1;
+}
+.linea8{
+    margin-top: 0rem;
+    right: 0px;
+    height: 300px;
+    z-index: -1;
+}
 
 /*------- Testimonials -------*/
 
@@ -465,13 +499,6 @@ video{
 }
 .testimonials_panel_color_uno{
     height: 30rem;
-    width: 35rem;
-    border-radius: 0px;
-    background: linear-gradient(180deg, #300537 16.04%, #971F5F 116.04%);
-    clip-path: polygon(100% 0, 100% 42%, 67% 100%, 0 100%, 58% 0);
-    position: absolute;
-    right: 0px;
-    margin-top: -3rem;
 }
 .testimonials_panel_color_dos{
     height: 7rem;
@@ -554,6 +581,31 @@ video{
 
 .Subscribe_to_Newsletter form div button:hover{
     background: #ff790c;
+}
+
+.linea1{
+    left: 20px;
+    margin-top: 140px;
+    height: 300px;
+    z-index: -1;
+}
+.linea2{
+    left: 5px;
+    margin-top: 140px;
+    height: 350px;
+    z-index: -1;
+}
+.linea3{
+    right: 0px;
+    margin-top: 140px;
+    height: 300px;
+    z-index: -1;
+}
+.linea4{
+    right: 10px;
+    margin-top: 140px;
+    height: 300px;
+    z-index: -1;
 }
 
 /*------- Footer -------*/
@@ -649,7 +701,6 @@ footer a:hover{
     color: #da117c;
 }
 @media screen and (max-width: 1200px){
-
     .shop_by_category_card_img{
         height: 200px;
         width: 250px;
@@ -665,9 +716,6 @@ footer a:hover{
         border: 1px solid #E4E4E4;
         box-shadow: 0px 4px 4px 0px #00000040;
     }
-}
-@media screen and (max-width: 1000px) {
-    
     .about_us_caracteristicas {
         height: 115px;
         width: 350px;
@@ -678,6 +726,15 @@ footer a:hover{
     .about_us_caracteristicas ul li{
         flex-direction: column !important;
     }
+    .linea5{
+        margin-top: 32rem;
+    }
+    .linea6{
+        margin-top: 28rem;
+    }
+}
+@media screen and (max-width: 1000px) {
+    
     .testimonials_panel_color_uno{
         width: 30rem;
     }
@@ -709,6 +766,12 @@ footer a:hover{
     .shop_by_category_boton{
         margin-right:0px ;
     } 
+    .linea5{
+        margin-top: 60rem;
+    }
+    .linea6{
+        margin-top: 56rem;
+    }
 }
 @media screen and (max-width: 800px){
     .testimonials_item{
@@ -737,12 +800,13 @@ footer a:hover{
         height: 50rem;
     }
     .testimonials_panel_color_uno{
-        height: 52rem;
+        height: 74rem;
+        right: 100px;
        
     }
     .testimonials_panel_color_dos{
-        margin-top: 31rem;
-        height: 18rem;     
+        margin-top: 41rem;
+        height: 8rem;     
     }
 
     .testimonials.owl-stage-outer{
@@ -754,7 +818,7 @@ footer a:hover{
     .about_us {
         flex-direction: column;
     }
-    .about_us_img{
+    .svg{
         display: none;
     }
     .about_us_caracteristicas {
@@ -772,6 +836,7 @@ footer a:hover{
     }
     .about_us_informacion{
         width: 100% !important;
+        padding-right: 0px !important;
     }
     .about_us_contenido_contenedor{
         padding: 50px 0px !important;
