--- a/css/styles.css
+++ b/css/styles.css
@@ -1031,6 +1031,9 @@ footer a:hover{
     }
 }
 @media screen and (max-width: 575px){
+    .hero_redes_sociales{
+        margin: auto;
+    } 
     .navbar-collapse{
         background-color: rgba(255, 255, 255, 0.603);
         backdrop-filter: blur(3px);
